A.txt
  File "/mnt/c/Users/jackt/MIT/PKR BOTS/teambot/Lec1Bot/player.py", line 113
    if street < 0:
                  ^
IndentationError: unindent does not match any outer indentation level
